--- a/project5.html
+++ b/project5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<title>About Me</title>
 	</head>
 	<body>
